fixed grad FE, some minor mistakes in Du,Dv, special OP guess, introduced Kstorage

--- a/2D_solver/Makefile
+++ b/2D_solver/Makefile
@@ -30,7 +30,7 @@ $(PROGRAM) : $(PROGRAMo) $(SUBRo)
 #################################
 
 clean_this: 
-	rm     $(PROGRAMo) 
+	rm     $(PROGRAMo) SC_classes_base.o SC_classes_derived.o 
 
 clean:
 	rm *.o;
