added plotting option for 9-component OP

--- a/2D_solver/Makefile
+++ b/2D_solver/Makefile
@@ -35,6 +35,8 @@ clean_this:
 clean:
 	rm *.o;
 
+plot9:
+	python3 plot_solution.py output_OP9.txt
 plot5:
 	python3 plot_solution.py output_OP5.txt
 plot3:
