--- a/2D_solver/Makefile
+++ b/2D_solver/Makefile
@@ -39,5 +39,9 @@ plot9:
 	python3 plot_solution.py output_OP9.txt
 plot5:
 	python3 plot_solution.py output_OP5.txt
+plot5c:
+	python3 plot_solution.py output_OP5c.txt
 plot3:
 	python3 plot_solution.py output_OP3.txt
+plot3c:
+	python3 plot_solution.py output_OP3c.txt
