--- a/2D_solver/.gitignore
+++ b/2D_solver/.gitignore
@@ -11,6 +11,7 @@ output_OP?.txt
 output_OP?c.txt
 initGuess_output_OP?.txt
 initial_guess_OP?.txt
+initial_guess_OP?c.txt
 
 # ignore gl_fdm changes
 gl_fdm
